Fixed Layout Issue

--- a/style.css
+++ b/style.css
@@ -7,14 +7,16 @@
 }
 body {
     background-color: rgb(1, 22, 39);
-    height: max(100dvh, 26rem);
+    height: 100dvh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 header {
     position: fixed;
+    top: 0;
     text-align: center;
     font-size: 1.5rem;
     color: white;
@@ -45,13 +47,11 @@ header {
     }
 }
 main {
-    margin: auto 0;
-    height: auto;
     width: 45rem;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 #description {
     width: 100%;
@@ -282,6 +282,11 @@ main {
         scale: 1;
         opacity: 1;
         color: white;
+    }
+}
+@media (max-width: 1500px) {
+    html {
+        font-size: 14px;
     }
 }
 @media (max-width: 768px) {
